--- a/index.html
+++ b/index.html
@@ -1,74 +1,67 @@
 <!DOCTYPE html>
 <html lang="en" data-theme="light">
 <head>
-<meta charset="UTF-8"/>
-<meta name="viewport" content="width=device-width,initial-scale=1.0"/>
-<title>Ckmillian – Home</title>
-<link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Inter:wght@400;600&display=swap" rel="stylesheet"/>
-<link rel="stylesheet" href="style2.css"/>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Ckmillian</title>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<header>
-  <div class="logo">Ckmillian</div>
-  <div class="menu-toggle" aria-label="Toggle navigation"><span></span><span></span><span></span></div>
-  <nav class="nav-links">
-    <a href="index.html" class="active">Home</a>
-    <a href="literacy.html">Literacy</a>
-    <a href="morality.html">Morality</a>
-    <a href="security.html">Security</a>
-    <a href="resources.html">Resources</a>
-  </nav>
-  <div class="controls">
-    <select id="lang-toggle">
-      <option value="en">English</option>
-      <option value="fr">Français</option>
-      <option value="sw">Swahili</option>
-      <option value="lg">Luganda</option>
-      <option value="es">Español</option>
-      <option value="ja">日本語</option>
-      <option value="zh">中文</option>
-      <option value="ar">العربية</option>
-    </select>
-    <label class="switch">
-      <input type="checkbox" id="themeSwitch"/>
-      <span class="slider"></span>
-    </label>
-  </div>
-</header>
+  <!-- Navigation -->
+  <header>
+    <div class="logo">Ckmillian</div>
+    <nav>
+      <ul>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">Philosophy</a></li>
+        <li><a href="#">Literacy</a></li>
+        <li><a href="#">Morality</a></li>
+        <li><a href="#">Security</a></li>
+        <li><a href="#">Resources</a></li>
+      </ul>
+      <button class="theme-btn">Dark</button>
+    </nav>
+  </header>
 
-<section class="hero">
-  <h1 class="typing">Ckmillian</h1>
-  <p>“Holistic wisdom shapes modern resilience.” – Inspired by Sun Tzu</p>
-</section>
+  <!-- Hero Section -->
+  <section class="hero">
+    <h1>Ckmillian</h1>
+    <p>Empowering minds for the digital era. Ethics, literacy, and security in one place.</p>
+    <a href="#" class="btn-primary">Get Started</a>
+  </section>
 
-<section class="about">
-  <h2>Our Mission</h2>
-  <p>We empower individuals to navigate the digital world responsibly with clarity, ethics, and security in mind. Knowledge is your shield.</p>
-</section>
+  <!-- Features Section -->
+  <section class="features">
+    <div class="feature-card">
+      <img src="https://source.unsplash.com/400x300/?books,learning" alt="Learn">
+      <h3>Learn Precisely</h3>
+      <p>Knowledge is power. Understand what matters most in the digital world.</p>
+    </div>
+    <div class="feature-card">
+      <img src="https://source.unsplash.com/400x300/?ethics,reflection" alt="Reflect">
+      <h3>Reflect Ethically</h3>
+      <p>Actions define us. Make decisions guided by strong ethical principles.</p>
+    </div>
+    <div class="feature-card">
+      <img src="https://source.unsplash.com/400x300/?security,technology" alt="Secure">
+      <h3>Secure Proactively</h3>
+      <p>Protect yourself and your information. Prevention is always better than cure.</p>
+    </div>
+  </section>
 
-<section class="features">
-  <div class="feature">
-    <img src="https://source.unsplash.com/400x300/?books,knowledge" alt="Learn">
-    <h3>Learn Precisely</h3>
-    <p>Real knowledge comes from understanding the limits of what you know.</p>
-  </div>
-  <div class="feature">
-    <img src="https://source.unsplash.com/400x300/?ethics,reflection" alt="Reflect">
-    <h3>Reflect Ethically</h3>
-    <p>Actions speak louder than words; ethics guide decision-making in the digital age.</p>
-  </div>
-  <div class="feature">
-    <img src="https://source.unsplash.com/400x300/?security,technology" alt="Secure">
-    <h3>Secure Proactively</h3>
-    <p>Prevention is better than cure—protect your data and digital footprint first.</p>
-  </div>
-</section>
+  <!-- Call to Action -->
+  <section class="cta">
+    <h2>Join the Ckmillian Community</h2>
+    <p>Get access to research, tools, and guidance to thrive digitally.</p>
+    <a href="#" class="btn-primary">Sign Up Now</a>
+  </section>
 
-<footer>
-  <p>&copy; 2025 Ckmillian</p>
-  <p>Designed by Mudde Carl Maximillian Kintu</p>
-</footer>
+  <!-- Footer -->
+  <footer>
+    <p>&copy; 2025 Ckmillian | Designed by Mudde Carl Maximillian Kintu</p>
+  </footer>
 
-<script src="script2.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
