--- a/index.html
+++ b/index.html
@@ -28,29 +28,94 @@
     <a href="#literacy" class="cta">Start Learning</a>
   </section>
 
-  <!-- LITERACY SECTION -->
-  <section id="literacy" class="content-section">
-    <h2>Literacy</h2>
-    <p>Ckmillian provides comprehensive guides to enhance reading, writing, and comprehension skills. Build a strong foundation for learning and self-expression.</p>
-  </section>
+<!-- LITERACY SECTION -->
+<section id="literacy" class="content-section">
+  <h2>Literacy</h2>
+  <div class="cards">
+    <div class="card">
+      <h3>Reading Skills</h3>
+      <p>Improve comprehension and speed with curated exercises and reading strategies.</p>
+      <a href="#" class="learn-more">Learn More</a>
+    </div>
+    <div class="card">
+      <h3>Writing Skills</h3>
+      <p>Master clear, concise, and expressive writing for school and personal projects.</p>
+      <a href="#" class="learn-more">Learn More</a>
+    </div>
+    <div class="card">
+      <h3>Comprehension</h3>
+      <p>Enhance memory and understanding with effective comprehension techniques.</p>
+      <a href="#" class="learn-more">Learn More</a>
+    </div>
+  </div>
+</section>
 
-  <!-- MORALITY SECTION -->
-  <section id="morality" class="content-section">
-    <h2>Morality</h2>
-    <p>Learn to make ethical decisions, understand human values, and develop a strong sense of right and wrong in daily life.</p>
-  </section>
+<!-- MORALITY SECTION -->
+<section id="morality" class="content-section">
+  <h2>Morality</h2>
+  <div class="cards">
+    <div class="card">
+      <h3>Ethical Thinking</h3>
+      <p>Understand moral dilemmas and develop strong ethical decision-making skills.</p>
+      <a href="#" class="learn-more">Learn More</a>
+    </div>
+    <div class="card">
+      <h3>Values & Principles</h3>
+      <p>Build a personal code of conduct to guide actions and relationships.</p>
+      <a href="#" class="learn-more">Learn More</a>
+    </div>
+    <div class="card">
+      <h3>Social Responsibility</h3>
+      <p>Learn how to positively impact your community and environment.</p>
+      <a href="#" class="learn-more">Learn More</a>
+    </div>
+  </div>
+</section>
 
-  <!-- SECURITY SECTION -->
-  <section id="security" class="content-section">
-    <h2>Security</h2>
-    <p>Gain practical knowledge about digital and physical safety. Learn cybersecurity basics, personal safety, and how to protect yourself online and offline.</p>
-  </section>
+<!-- SECURITY SECTION -->
+<section id="security" class="content-section">
+  <h2>Security</h2>
+  <div class="cards">
+    <div class="card">
+      <h3>Digital Safety</h3>
+      <p>Protect your devices, accounts, and personal information online.</p>
+      <a href="#" class="learn-more">Learn More</a>
+    </div>
+    <div class="card">
+      <h3>Physical Safety</h3>
+      <p>Stay aware of your surroundings and learn tips for personal safety at home and school.</p>
+      <a href="#" class="learn-more">Learn More</a>
+    </div>
+    <div class="card">
+      <h3>Cybersecurity Basics</h3>
+      <p>Learn about VPNs, antivirus tools, and safe browsing habits.</p>
+      <a href="#" class="learn-more">Learn More</a>
+    </div>
+  </div>
+</section>
 
-  <!-- RESOURCES SECTION -->
-  <section id="resources" class="content-section">
-    <h2>Resources</h2>
-    <p>Access books, guides, tools, and references that help you apply what you learn. Ckmillian ensures you always have the right resources at hand.</p>
-  </section>
+<!-- RESOURCES SECTION -->
+<section id="resources" class="content-section">
+  <h2>Resources</h2>
+  <div class="cards">
+    <div class="card">
+      <h3>Guides</h3>
+      <p>Step-by-step guides to help you master literacy, morality, and security topics.</p>
+      <a href="#" class="learn-more">Learn More</a>
+    </div>
+    <div class="card">
+      <h3>Tools & References</h3>
+      <p>Access helpful tools, cheat sheets, and references for practical learning.</p>
+      <a href="#" class="learn-more">Learn More</a>
+    </div>
+    <div class="card">
+      <h3>Community</h3>
+      <p>Connect with peers, share knowledge, and participate in discussions.</p>
+      <a href="#" class="learn-more">Learn More</a>
+    </div>
+  </div>
+</section>
+
 
   <!-- FOOTER -->
   <footer>
