--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Ckmillian</title>
   <link rel="stylesheet" href="style2.css">
+  <!-- Font Awesome 6 -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"/>
 </head>
 <body>
   <!-- HEADER -->
@@ -12,11 +14,11 @@
     <div class="logo">Ckmillian</div>
     <nav>
       <ul>
-      <li><a href="index.html" class="active">Home</a></li>
-      <li><a href="literacy.html">Literacy</a></li>
-      <li><a href="morality.html">Morality</a></li>
-      <li><a href="security.html">Security</a></li>
-      <li><a href="resources.html">Resources</a></li>
+        <li><a href="index.html" class="active">Home</a></li>
+        <li><a href="literacy.html">Literacy</a></li>
+        <li><a href="morality.html">Morality</a></li>
+        <li><a href="security.html">Security</a></li>
+        <li><a href="resources.html">Resources</a></li>
       </ul>
     </nav>
     <div class="hamburger" onclick="toggleMenu()">☰</div>
@@ -34,19 +36,19 @@
   <h2>Literacy</h2>
   <div class="cards">
     <div class="card">
-      <img src="https://img.icons8.com/ios-filled/50/000000/book.png" alt="Reading Icon">
+      <i class="fas fa-book fa-2x"></i>
       <h3>Reading Skills</h3>
       <p>Improve comprehension and speed with curated exercises and reading strategies.</p>
       <a href="#" class="learn-more">Learn More</a>
     </div>
     <div class="card">
-      <img src="https://img.icons8.com/ios-filled/50/000000/edit.png" alt="Writing Icon">
+      <i class="fas fa-pen-fancy fa-2x"></i>
       <h3>Writing Skills</h3>
       <p>Master clear, concise, and expressive writing for school and personal projects.</p>
       <a href="#" class="learn-more">Learn More</a>
     </div>
     <div class="card">
-      <img src="https://img.icons8.com/ios-filled/50/000000/reading.png" alt="Comprehension Icon">
+      <i class="fas fa-book-reader fa-2x"></i>
       <h3>Comprehension</h3>
       <p>Enhance memory and understanding with effective comprehension techniques.</p>
       <a href="#" class="learn-more">Learn More</a>
@@ -59,19 +61,19 @@
   <h2>Morality</h2>
   <div class="cards">
     <div class="card">
-      <img src="https://img.icons8.com/ios-filled/50/000000/light-on.png" alt="Ethics Icon">
+      <i class="fas fa-lightbulb fa-2x"></i>
       <h3>Ethical Thinking</h3>
       <p>Understand moral dilemmas and develop strong ethical decision-making skills.</p>
       <a href="#" class="learn-more">Learn More</a>
     </div>
     <div class="card">
-      <img src="https://img.icons8.com/ios-filled/50/000000/compass.png" alt="Values Icon">
+      <i class="fas fa-compass fa-2x"></i>
       <h3>Values & Principles</h3>
       <p>Build a personal code of conduct to guide actions and relationships.</p>
       <a href="#" class="learn-more">Learn More</a>
     </div>
     <div class="card">
-      <img src="https://img.icons8.com/ios-filled/50/000000/group.png" alt="Community Icon">
+      <i class="fas fa-users fa-2x"></i>
       <h3>Social Responsibility</h3>
       <p>Learn how to positively impact your community and environment.</p>
       <a href="#" class="learn-more">Learn More</a>
@@ -84,19 +86,19 @@
   <h2>Security</h2>
   <div class="cards">
     <div class="card">
-      <img src="https://img.icons8.com/ios-filled/50/000000/lock.png" alt="Digital Safety Icon">
+      <i class="fas fa-lock fa-2x"></i>
       <h3>Digital Safety</h3>
       <p>Protect your devices, accounts, and personal information online.</p>
       <a href="#" class="learn-more">Learn More</a>
     </div>
     <div class="card">
-      <img src="https://img.icons8.com/ios-filled/50/000000/home-security.png" alt="Physical Safety Icon">
+      <i class="fas fa-shield-alt fa-2x"></i>
       <h3>Physical Safety</h3>
       <p>Stay aware of your surroundings and learn tips for personal safety at home and school.</p>
       <a href="#" class="learn-more">Learn More</a>
     </div>
     <div class="card">
-      <img src="https://img.icons8.com/ios-filled/50/000000/shield.png" alt="Cybersecurity Icon">
+      <i class="fas fa-user-shield fa-2x"></i>
       <h3>Cybersecurity Basics</h3>
       <p>Learn about VPNs, antivirus tools, and safe browsing habits.</p>
       <a href="#" class="learn-more">Learn More</a>
@@ -109,26 +111,25 @@
   <h2>Resources</h2>
   <div class="cards">
     <div class="card">
-      <img src="https://img.icons8.com/ios-filled/50/000000/open-book.png" alt="Guides Icon">
+      <i class="fas fa-book-open fa-2x"></i>
       <h3>Guides</h3>
       <p>Step-by-step guides to help you master literacy, morality, and security topics.</p>
       <a href="#" class="learn-more">Learn More</a>
     </div>
     <div class="card">
-      <img src="https://img.icons8.com/ios-filled/50/000000/tools.png" alt="Tools Icon">
+      <i class="fas fa-tools fa-2x"></i>
       <h3>Tools & References</h3>
       <p>Access helpful tools, cheat sheets, and references for practical learning.</p>
       <a href="#" class="learn-more">Learn More</a>
     </div>
     <div class="card">
-      <img src="https://img.icons8.com/ios-filled/50/000000/conference-call.png" alt="Community Icon">
+      <i class="fas fa-users fa-2x"></i>
       <h3>Community</h3>
       <p>Connect with peers, share knowledge, and participate in discussions.</p>
       <a href="#" class="learn-more">Learn More</a>
     </div>
   </div>
 </section>
-
 
   <!-- FOOTER -->
   <footer>
