--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
   <!-- HERO SECTION -->
   <section class="hero">
-    <h1>Welcome to Ckmillian</h1>
+    <h1>Welcome to <span class="glitch">Ckmillian</span></h1>
     <p>Learn, grow, and empower yourself with knowledge.</p>
     <a href="#literacy" class="cta">Start Learning</a>
   </section>
