--- a/index.html
+++ b/index.html
@@ -26,7 +26,12 @@
 
   <!-- HERO SECTION -->
   <section class="hero">
-    <h1>Welcome to <span class="glitch">Ckmillian</span></h1>
+   <h1>Welcome to 
+  <span class="glitch">
+    <span>C</span><span>k</span><span>m</span><span>i</span><span>l</span><span>l</span><span>i</span><span>a</span><span>n</span>
+  </span>
+</h1>
+
     <p>Learn, grow, and empower yourself with knowledge.</p>
     <a href="#literacy" class="cta">Start Learning</a>
   </section>
